# ios-simulator-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.ko.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  questions.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: brew-tap-update.yml
lib/: main.py
lib/core/constants/: app_constants.py
lib/core/errors/: app_errors.py
lib/core/logging/: logger.py
lib/core/utils/: result.py
lib/features/simulator_control/data/datasources/: accessibility_datasource.py  simctl_datasource.py  simulator_process_datasource.py
lib/features/simulator_control/data/models/: ui_element_model.py  ui_frame_model.py
lib/features/simulator_control/data/repositories/: simulator_repository_impl.py
lib/features/simulator_control/domain/entities/: ui_element.py  ui_frame.py
lib/features/simulator_control/domain/repositories/: simulator_repository.py
lib/features/simulator_control/domain/usecases/: add_media_usecase.py  assertions_usecase.py  boot_simulator_usecase.py  create_simulator_usecase.py  delete_simulator_usecase.py  erase_simulator_usecase.py  get_app_container_usecase.py  (+39 more)
scripts/: benchmark.py
scripts/homebrew/: ios-simulator-mcp.rb
tests/: accessibility_datasource_optimization_test.py  mcp_tools_test.py  simctl_datasource_optimization_test.py  simulator_usecases_test.py
(+2 files in other folders)
